kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: api
