kubernetes/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: ui
